deployment-dev.yaml
---
# ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: exchanger-ing-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: exchanger-api.bonum.credit
      http:
        paths:
          - path: /
            backend:
              serviceName: exchanger-dev
              servicePort: 80

---
# service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: exchanger-dev
    track: dev
    tier: backend
  name: exchanger-dev
spec:
  selector:
    app: exchanger-dev
    track: dev
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: rest

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: exchanger-dev
    track: dev
    tier: backend
  name: exchanger-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: exchanger-dev
      track: dev
      tier: backend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: exchanger-dev
        track: dev
        tier: backend
    spec:
      terminationGracePeriodSeconds: 15
      containers:
        - image: <<__your_registry_ip_address__>>bonum-exchanger:dev
          imagePullPolicy: "Always"
          name: exchanger
          command: ["/app/run.sh"]
          volumeMounts:
            - mountPath: /bonum_logs
              name: bonum-logs-dev
            - mountPath: /app
              name: code-storage-exchanger-dev
            - mountPath: /tmp/exchanger-static
              name: static-exchanger-dev
            - name: config
              mountPath: "/etc/bonum-exchanger"
              readOnly: true
      volumes:
        - name: bonum-logs-dev
          persistentVolumeClaim:
            claimName: bonum-logs-pv-claim-dev
        - name: code-storage-exchanger-dev
          persistentVolumeClaim:
            claimName: code-storage-exchanger-pv-claim-dev
        - name: config
          configMap:
            name: exchanger-local-settings-dev
        - name: static-exchanger-dev
          persistentVolumeClaim:
            claimName: static-exchanger-pv-claim-dev
